Add params to list endpoint
- sortBy
- sortDirection
